2007-07-29  Steve Frécinaux  <code@istique.net>

	* gedit/gedit-document-saver.[ch]:
	* gedit/gedit-local-document-saver.[ch]:
	* gedit/gedit-gnomevfs-document-saver.[ch]:
	* gedit/gedit-document.c:

	Split GeditDocumentSaver into an abstract type and implementations of
	it (Bug 453048).

2007-07-27  Jesse van den Kieboom  <jesse@icecrew.nl>

	* plugins/snippets/data/php.xml: fixed php snippets (spacing and
	nested/invalid snippets)
	
2007-07-27  Jesse van den Kieboom  <jesse@icecrew.nl>

	* plugins/snippets/snippets/Manager.py: fixed not allowing deletion
	of system snippets
	
2007-07-27  Jesse van den Kieboom  <jesse@icecrew.nl>

	* plugins/snippets/snippets/Manager.py: fixed buffer and view
	settings

2007-07-27  Jesse van den Kieboom  <jesse@icecrew.nl>

	* configure.ac:
	* plugins/snippets/data/Makefile.am:
	* plugins/snippets/data/snippets.lang:
	* plugins/snippets/data/lang/*
	* plugins/snippets/snippets/Library.py:
	* plugins/snippets/snippets/Manager.py:
	
	Let snippets manager use a custom GtkLanguageManager which adds
	search paths for the snippets language file. Install snippets language
	file in $prefix/share/gedit-2/plugins/snippets/lang instead of 
	the gtksourceview language directory because it's private to the 
	snippets plugin
	
2007-07-27  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-window.c:
	* gedit/gedit-language-manager.c:
	* gedit/gedit-language-manager.h:
	* bindings/python/gedit.override:
	* bindings/python/gedit.defs:

	Hide hidden languages from the UI. Patch by Jesse.

	* gedit/gtksourceprintjob.c: make sure to highlight text
	before printing

2007-07-26  Jesse van den Kieboom  <jesse@icecrew.nl>
	
	* plugins/snippets/snippets/Parser.py: fixed parsing default list (
	allow escaping the list and allow whitespace
	* plugins/snippets/data/snippets.lang: fixed regex placeholder
	* plugins/snippets/snippets/Placeholder.py: fixed problem with
	removed snippet being entered (updated)
	
	* plugins/snippets/snippets/Manager.py: