@@ -1,3 +1,8 @@
+2007-07-30  Steve Frécinaux  <code@istique.net>
+
+	* gedit/gedit-document-saver.c: make "encoding" a property, for
+	consistency with the saver.
+
 2007-07-29  Steve Frécinaux  <code@istique.net>
 
 	* gedit/gedit-document-saver.[ch]:
